added more text to home page

--- a/templates/personalPortfolio/home.html
+++ b/templates/personalPortfolio/home.html
@@ -8,10 +8,15 @@
             <h1 class="font-weight-bold">Sherlock's Personal Tech Portfolio and Blog</h1>
         </div>
     </div>
-        <div class="row justify-content-center my-3">
-            <img src="{% static 'portfolio/portfolioImage.png' %}">
-
+    <div class="row justify-content-center my-3">
+        <img src="{% static 'portfolio/portfolioImage.png' %}">
+    </div>
+    <div class="row justify-content-center my-3">
+        <div class = "col-md-9 text-center">
+            <h1 id="hometext" class="font-weight-bold">Alec Sherlock is a recent graduate of Computer Science, and is highly inquisitive, self-motivated, and eager to make his mark on the world!</h1>
         </div>
+    </div>
+
 
     <h2 class =" text-center mt-5"> Portfolio</h2>
     <hr>
