--- a/templates/personalPortfolio/base.html
+++ b/templates/personalPortfolio/base.html
@@ -35,6 +35,9 @@
           <li class="nav-item">
             <a class="nav-link" href="https://www.linkedin.com/in/alec-sherlock-b9b9b7140/" target="_blank">LinkedIn</a>
           </li>
+            <li class="nav-item">
+            <a class="nav-link" href="{% static 'portfolio/myResume.pdf' %}" target="_blank">Resume</a>
+          </li>
 
             <li class="nav-item">
             <a class="nav-link" href="https://github.com/ahsherlock" target="_blank">GitHub</a>
